# PixelLab

./: .gitignore  README.md
Source/: CMakeLists - 副本.txt  CMakeLists.txt  PixelLab.sln
Source/ClusterForward/: ClusterForward.vcxproj
Source/ClusterForward/assets/: lighting.frag
Source/ClusterForward/assets/Scenes/: Sponza_PBR.json
Source/ClusterForward/include/: App.h
Source/ClusterForward/src/: App.cpp  main.cpp
Source/ClusterForward/x64/Debug/: app.obj.enc
Source/DeferredShading/: DeferredShading.vcxproj
Source/DeferredShading/assets/: defered_dirlighting.frag  defered_dirlighting.vert  defered_pointlighting.frag  defered_pointlighting.vert  deferred_geo.frag  deferred_geo.vert  deferred_shading.frag  diffuse.frag  g_buffer.frag  lamp.frag  lighting.frag  lighting.vert  texture.frag  texture2.frag
Source/DeferredShading/include/: App.h
Source/DeferredShading/src/: App.cpp  main.cpp
Source/Dithering/: Dithering.vcxproj  imgui.ini
Source/Dithering/assets/: basic.fs  basic2.vs  basic3.frag  basic3.vert  fullscreen.vert
Source/Dithering/include/: App.h
Source/Dithering/src/: App.cpp
Source/ForwardPlus/: ForwardPlus.vcxproj  imgui.ini
Source/ForwardPlus/assets/: ForwardPlusDebug.frag  LightingTileInfoDebug.frag  basic.vert  depthprepass.frag  lamp.frag  lightculling.compute  lightculling2.compute  lighting.frag  texture.frag
Source/ForwardPlus/include/: App.h
Source/ForwardPlus/src/: App.cpp  main.cpp
Source/ForwardPlus/x64/Debug/: app.obj.enc
Source/GLCraft/: GLCraft.vcxproj  GLCraft.vcxproj.filters
Source/GLCraft/include/: App.h  Chunk.h  shader_utils.h
Source/GLCraft/src/: App.cpp  main.cpp  shader_utils.cpp
Source/HDRRendering/: CMakeLists.txt  HDRRendering.vcxproj  imgui.ini
Source/HDRRendering/Debug/: app.obj.enc
Source/HDRRendering/assets/Scenes/: HDR_Alucy.json  HDR_Sphere.json
Source/HDRRendering/include/: App.h
Source/HDRRendering/src/: App.cpp  main.cpp
Source/IBLTools/: CMakeLists.txt  IBLTools.vcxproj  lut.hdr
Source/IBLTools/include/: BRDFGenerator.h  BRDFGenerator.hpp  IBLBaker.h  IBLBaker.hpp
Source/IBLTools/src/: BRDFGenerator.cpp  IBLBaker.cpp  main.cpp
Source/IBLValidation/: CMakeLists.txt
Source/IBLValidation/assets/Scenes/: HDR_Bistro.json  HDR_Bistro_Motor.json  HDR_Bistro_RoadLight.json  HDR_DamagedHelmet.json
Source/IBLValidation/include/: App.h
Source/IBLValidation/src/: App.cpp
Source/ImageProcessingCompute/: ImageProcessingCompute.vcxproj  ImageProcessingCompute.vcxproj.filters
Source/ImageProcessingCompute/assets/: basic3.frag  basic3.vert  blur.compute
Source/ImageProcessingCompute/include/: App.h
Source/ImageProcessingCompute/src/: App.cpp  main.cpp
Source/LibAppFramework/: CMakeLists.txt  LibAppFramework.vcxproj  LibAppFramework.vcxproj.filters
Source/LibAppFramework/include/: FPSCameraController.h  Input.h  OrbitCameraController.h  SGUI.h  STime.h  Time.h  application.h  base.h
Source/LibAppFramework/src/: FPSCameraController.cpp  Input.cpp  OrbitCameraController.cpp  STime.cpp  Time.cpp  application.cpp
Source/LibAppFramework/x64/Debug/: LibAppFramework.vcxproj.FileListAbsolute.txt
Source/Lighting/: Lighting.vcxproj
Source/Lighting/assets/: lamp.frag  lighting.frag
Source/Lighting/src/: App.cpp
Source/MeshConvertor/: MeshConvertor.vcxproj
Source/MeshConvertor/src/: main.cpp
Source/MultithreadedRendering/: CMakeLists.txt
Source/MultithreadedRendering/include/: App.h
Source/MultithreadedRendering/src/: App.cpp  main.cpp
Source/ParticleSystemTest/: ParticleSystemTest.vcxproj  imgui.ini
Source/ParticleSystemTest/assets/: lamp.frag  lamp.vert  lighting.frag
Source/ParticleSystemTest/include/: App.h
Source/ParticleSystemTest/src/: App.cpp
Source/PathTracer/: PathTracer.vcxproj  imgui.ini
Source/PathTracer/Debug/: app.obj.enc
Source/PathTracer/assets/: fullquad.vert  invert.compute  pathtracer.compute  pathtracer_gltf.compute  pathtracer_spherescene.compute
Source/PathTracer/include/: App.h
Source/PathTracer/src/: App.cpp  main.cpp
Source/ShaderTest/: CMakeLists.txt  ShaderTest.vcxproj  ShaderTest.vcxproj.filters
Source/ShaderTest/include/: App.h
Source/ShaderTest/src/: App.cpp
Source/SkyEngine/: CMakeLists.txt  SkyEngine.vcxproj  SkyEngine.vcxproj.filters
Source/SkyEngine/include/: Base.h  EngineBase.h  SkyEngine.h  Vulkan.7z
Source/SkyEngine/include/Components/: Component.h  MeshRenderer.h  Transform.h
Source/Sponza/: Sponza.vcxproj
Source/Sponza/assets/: texture2.frag
Source/Sponza/include/: App.h
Source/Sponza/src/: App.cpp
Source/TextureMapping/: TextureMapping.vcxproj
Source/TextureMapping/assets/: basic.frag  basic.vs  basic2.vs  basic4.vert  texture.fs
Source/TextureMapping/include/: App.h
Source/TextureMapping/src/: App.cpp  main.cpp
Source/x64/Debug/: AppFramework.lib
(+168 files in other folders)
